fourth
change Timetable Collection to List
add support Multiple Sessions Same Time